--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@types/react-dom": "^18.0.6",
     "axios": "^1.1.3",
     "json-server": "^0.17.0",
+    "lodash.debounce": "^4.0.8",
     "node-sass": "^7.0.3",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
@@ -50,6 +51,7 @@
     ]
   },
   "devDependencies": {
-    "@babel/eslint-parser": "^7.19.1"
+    "@babel/eslint-parser": "^7.19.1",
+    "@types/lodash.debounce": "^4.0.7"
   }
 }
