--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "lodash.debounce": "^4.0.8",
     "node-sass": "^7.0.3",
     "react": "^18.2.0",
+    "react-content-loader": "^6.2.0",
     "react-dom": "^18.2.0",
     "react-icons": "^4.6.0",
     "react-redux": "^8.0.4",
