--- a/package.json
+++ b/package.json
@@ -14,7 +14,9 @@
     "@types/react-dom": "^18.0.6",
     "axios": "^1.1.3",
     "better-react-carousel": "^1.1.1",
+    "formik": "^2.2.9",
     "json-server": "^0.17.0",
+    "jwt-decode": "^3.1.2",
     "lodash.debounce": "^4.0.8",
     "node-sass": "^7.0.3",
     "react": "^18.2.0",
@@ -25,7 +27,8 @@
     "react-router-dom": "^6.4.2",
     "react-scripts": "5.0.1",
     "typescript": "^4.8.4",
-    "web-vitals": "^2.1.4"
+    "web-vitals": "^2.1.4",
+    "yup": "^0.32.11"
   },
   "scripts": {
     "start": "react-scripts start",
@@ -34,6 +37,7 @@
     "eject": "react-scripts eject",
     "json-server": "json-server --watch public/db.json --port 3001"
   },
+  "proxy": "http://localhost:8080",
   "eslintConfig": {
     "extends": [
       "react-app",
