--- a/package.json
+++ b/package.json
@@ -10,23 +10,25 @@
     "@testing-library/user-event": "^13.5.0",
     "@types/jest": "^29.1.2",
     "@types/node": "^18.8.4",
-    "@types/react": "^18.0.21",
-    "@types/react-dom": "^18.0.6",
+    "ahooks": "^3.7.5",
     "axios": "^1.1.3",
     "better-react-carousel": "^1.1.1",
     "formik": "^2.2.9",
     "json-server": "^0.17.0",
     "jwt-decode": "^3.1.2",
     "lodash.debounce": "^4.0.8",
+    "multiselect-react-dropdown": "^2.0.25",
     "node-sass": "^7.0.3",
     "react": "^18.2.0",
     "react-content-loader": "^6.2.0",
     "react-dom": "^18.2.0",
     "react-icons": "^4.6.0",
+    "react-multi-carousel": "^2.8.2",
     "react-query": "^3.39.2",
     "react-redux": "^8.0.4",
     "react-router-dom": "^6.4.2",
     "react-scripts": "5.0.1",
+    "reduxjs-toolkit-persist": "^7.2.1",
     "typescript": "^4.8.4",
     "web-vitals": "^2.1.4",
     "yup": "^0.32.11"
@@ -59,6 +61,8 @@
   },
   "devDependencies": {
     "@babel/eslint-parser": "^7.19.1",
-    "@types/lodash.debounce": "^4.0.7"
+    "@types/lodash.debounce": "^4.0.7",
+    "@types/react": "^18.0.26",
+    "@types/react-dom": "^18.0.10"
   }
 }
