--- a/package.json
+++ b/package.json
@@ -4,12 +4,13 @@
   "private": true,
   "dependencies": {
     "@redux-devtools/extension": "^3.2.3",
-    "@reduxjs/toolkit": "^1.8.6",
+    "@reduxjs/toolkit": "^1.9.3",
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
     "@types/jest": "^29.1.2",
     "@types/node": "^18.8.4",
+    "@types/react-redux": "^7.1.25",
     "ahooks": "^3.7.5",
     "axios": "^1.1.3",
     "better-react-carousel": "^1.1.1",
@@ -25,7 +26,7 @@
     "react-icons": "^4.6.0",
     "react-multi-carousel": "^2.8.2",
     "react-query": "^3.39.2",
-    "react-redux": "^8.0.4",
+    "react-redux": "^8.0.5",
     "react-router-dom": "^6.4.2",
     "react-scripts": "5.0.1",
     "reduxjs-toolkit-persist": "^7.2.1",
