--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "lodash.debounce": "^4.0.8",
     "multiselect-react-dropdown": "^2.0.25",
     "node-sass": "^7.0.3",
+    "query-string": "^8.1.0",
     "react": "^18.2.0",
     "react-content-loader": "^6.2.0",
     "react-dom": "^18.2.0",
